feat: add cloudinary api

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -25,3 +25,7 @@
   color: white !important;
   font-size: 24px !important;
 }
+.badge-variant {
+  color: black !important;
+  background-color: black;
+}
