feat: add a store get person trust

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -3,6 +3,7 @@
   margin-bottom: 15px;
 }
 .container-form {
+  justify-content: center;
   text-align: center;
 }
 .btn-form {
@@ -15,4 +16,37 @@
   &:focus {
     border: 1px solid $colorPrimary !important;
   }
+}
+.container-profil {
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.container-image {
+  width: 60%;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border: 1px solid #cacaca;
+  img {
+    width: 100%;
+    height: 50%;
+    padding: 3%;
+  }
+  span {
+    color: #cacaca;
+    display: block;
+    font-size: 12px;
+  }
+}
+.btn-profil {
+  color: $colorPrimary;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 1%;
+  display: block;
+}
+.image-input {
+  display: none;
 }
