--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -22,10 +22,25 @@
   }
 }
 .iconHeader {
-  color: white !important;
+  color: $colorSecondary !important;
   font-size: 24px !important;
 }
 .badge-variant {
   color: black !important;
   background-color: black;
+}
+.profil {
+  background-color: $colorSecondary !important;
+  border-radius: 25px !important;
+  font-size: 14px;
+  text-align: center;
+  border-style: none !important;
+  width: 10vw;
+  height: 5vh !important;
+  display: inline;
+
+  &:active {
+    outline-style: none !important;
+    border-style: none !important;
+  }
 }
