--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,7 +8,6 @@
 }
 .navbar_container {
   width: 80%;
-  margin: 0% 10%;
   justify-content: space-between;
 }
 .navbar_container_menu {
@@ -17,6 +16,7 @@
 .navbar_container_menu_link {
   width: 100%;
   justify-content: flex-end;
+  align-self: end;
   .nav-item {
     margin-left: 50px;
   }
@@ -25,22 +25,6 @@
   color: $colorSecondary !important;
   font-size: 24px !important;
 }
-.badge-variant {
-  color: black !important;
-  background-color: black;
-}
-.profil {
-  background-color: $colorSecondary !important;
-  border-radius: 25px !important;
-  font-size: 14px;
-  text-align: center;
-  border-style: none !important;
-  width: 10vw;
-  height: 5vh !important;
-  display: inline;
 
-  &:active {
-    outline-style: none !important;
-    border-style: none !important;
-  }
+.profil-dropdown {
 }
