--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -13,7 +13,24 @@
   color: white;
   outline-color: $colorPrimary;
   margin-top: 17px;
-  &:focus {
+  &-reset {
+    background-color: white;
+    color: $colorPrimary;
+    border: 1px solid $colorPrimary !important;
+    &:hover {
+      background-color: white !important;
+      color: $colorPrimary;
+      outline-style: none;
+    }
+    &:focus {
+      background-color: white !important;
+      color: $colorPrimary;
+      outline-style: none !important;
+    }
+  }
+  &:hover {
+    background-color: $colorPrimary;
+    color: white;
     border: 1px solid $colorPrimary !important;
   }
 }
@@ -24,14 +41,15 @@
   align-items: center;
 }
 .container-image {
-  width: 60%;
+  width: 250px;
+  height: 230px;
   justify-content: center;
   text-align: center;
   align-items: center;
   border: 1px solid #cacaca;
   img {
     width: 100%;
-    height: 50%;
+    height: 100%;
     padding: 3%;
   }
   span {
