--- a/src/components/protective/protective.scss
+++ b/src/components/protective/protective.scss
@@ -25,10 +25,11 @@ p {
 .container {
 }
 .image {
-  padding: 15px 0px;
+  padding-left: -5px;
   width: 100%;
-  border-radius: 15px;
+  border-radius: 5px !important;
 }
+
 .container_person {
   @include borderRadius;
   border: 1px solid $colorSecondary;
